log
Fri Apr 17 05:58:35 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
51eb798
Fri Apr 17 06:06:14 PM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:28: error: void value not ignored as it ought to be
   49 |     if(new == NULL) return exit(0);
      |                            ^~~~~~~
81104b1
